--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "start": "node -r sucrase/register src/indexEngine.ts",
     "start:rates": "node -r sucrase/register src/indexRatesEngine.ts",
     "start:api": "node -r sucrase/register src/indexApi.ts",
+    "start:migrate": "node -r sucrase/register src/bin/migration.ts",
     "test": "mocha -r sucrase/register 'test/**/*.test.ts'",
     "demo": "parcel serve src/demo/index.html --open",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
