Wrote script to give info on partition

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "start:api": "node -r sucrase/register src/indexApi.ts",
     "start:destroyPartition": "node -r sucrase/register src/bin/destroyPartition.ts",
     "start:migrate": "node -r sucrase/register src/bin/migration.ts",
+    "stats": "node -r sucrase/register src/bin/partitionStats.ts",
     "test": "mocha -r sucrase/register 'test/**/*.test.ts'",
     "demo": "parcel serve src/demo/index.html --open",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx ."
